New duotone images

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 
     <div class="box article big-article">
-        <article style="background-image: url(img/allthethings.png)">
+        <article style="background-image: url(img/tech.intimidation.png)">
             <div class="content">
                 <h2>Technical Intimidation</h2>
                 <span class="genre"><a href="http://clabs.org/blog/TechnicalIntimidation">Article</a></span><br>
@@ -74,7 +74,7 @@
         </article>
     </div>
     <div class="box article">
-        <article style="background-image: url(img/sup.png)">
+        <article style="background-image: url(img/sup.duotone.png)">
             <div class="content">
                 <h2>How Not to Make a Custom Renderer in Rails</h2>
                 <span class="genre"><a
@@ -92,7 +92,7 @@
         </article>
     </div>
     <div class="box article big-article">
-        <article style="background-image: url(estimation/blew.away.jpg)">
+        <article style="background-image: url(img/estimates.png)">
             <div class="content">
                 <h2>No Number Estimates</h2>
                 <span class="genre"><a href="https://youtu.be/sofW9CsdiaA">Video</a></span><br/>
@@ -101,10 +101,10 @@
         </article>
     </div>
     <div class="box article">
-        <article style="background-image: url(wicswac/wicswac.org.png)">
+        <article style="background-image: url(img/bacon.png)">
             <div class="content">
                 <h2>wicswac</h2>
-                <span class="genre">Video (RailsConf 2018) <i>coming soon...</i></span><br/>
+                <span class="genre"><a href="">Video (RailsConf 2018) <i>coming soon...</i></a></span><br/>
                 <span class="genre"><a href="wicswac/wicswac.html">Slides</a></span>
             </div>
         </article>
