Add a few, re-order, and bg color for body

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         body {
             font-family: 'Sorts Mill Goudy';
-            background-color: #ffffff;
+            background-color: #365151;
         }
 
         h1, h2, h3 {
@@ -63,13 +63,52 @@
 <main>
 
 
+    <div class="box article">
+        <article style="background-image: url(img/bacon.png)">
+            <div class="content">
+                <h2>wicswac</h2>
+                <span class="genre"><a href=""
+                                       target="_blank">Video (RailsConf 2018) <i>coming soon...</i></a></span><br/>
+                <span class="genre"><a href="wicswac/wicswac.html" target="_blank">Slides</a></span>
+            </div>
+        </article>
+    </div>
     <div class="box article big-article">
         <article style="background-image: url(img/tech.intimidation.png)">
             <div class="content">
                 <h2>Technical Intimidation</h2>
                 <span class="genre"><a href="http://clabs.org/blog/TechnicalIntimidation">Article</a></span><br>
                 <span class="genre"><a
-                        href="https://www.youtube.com/watch?v=i4cryg-q_YM">Video (RailsConf 2013)</a></span>
+                        href="https://www.youtube.com/watch?v=i4cryg-q_YM"
+                        target="_blank">Video (RailsConf 2013)</a></span>
+            </div>
+        </article>
+    </div>
+    <div class="box article big-article">
+        <article style="background-image: url(img/habits.duck.png)">
+            <div class="content">
+                <h2>Habits of a 2.76x Developer</h2>
+                <span class="genre"><a href="https://www.youtube.com/watch?v=e--7TWeGu94"
+                                       target="_blank">Video</a></span><br/>
+                <span class="genre"><a href="productivity/productivity.html" target="_blank">Slides</a></span>
+            </div>
+        </article>
+    </div>
+    <div class="box article big-article">
+        <article style="background-image: url(img/elegance.png)">
+            <div class="content">
+                <h2>In Search of Elegance</h2>
+                <span class="genre"><a href="https://youtu.be/MPi6O-KlHEk" target="_blank">Video</a></span><br/>
+                <span class="genre"><a href="elegance/elegance.html" target="_blank">Slides</a></span>
+            </div>
+        </article>
+    </div>
+    <div class="box article big-article">
+        <article style="background-image: url(img/estimates.png)">
+            <div class="content">
+                <h2>No Number Estimates</h2>
+                <span class="genre"><a href="https://youtu.be/sofW9CsdiaA" target="_blank">Video</a></span><br/>
+                <span class="genre"><a href="estimation/estimation.html" target="_blank">Slides</a></span>
             </div>
         </article>
     </div>
@@ -78,34 +117,24 @@
             <div class="content">
                 <h2>How Not to Make a Custom Renderer in Rails</h2>
                 <span class="genre"><a
-                        href="https://www.youtube.com/watch?v=fWLzNRF5YZI">Video (Big Ruby 2013)</a></span>
-            </div>
-        </article>
-    </div>
-    <div class="box article big-article">
-        <article style="background-image: url(img/elegance.png)">
-            <div class="content">
-                <h2>In Search of Elegance</h2>
-                <span class="genre"><a href="https://youtu.be/MPi6O-KlHEk">Video</a></span><br/>
-                <span class="genre"><a href="elegance/elegance.html">Slides</a></span>
-            </div>
-        </article>
-    </div>
-    <div class="box article big-article">
-        <article style="background-image: url(img/estimates.png)">
-            <div class="content">
-                <h2>No Number Estimates</h2>
-                <span class="genre"><a href="https://youtu.be/sofW9CsdiaA">Video</a></span><br/>
-                <span class="genre"><a href="estimation/estimation.html">Slides</a></span>
+                        href="https://www.youtube.com/watch?v=fWLzNRF5YZI"
+                        target="_blank">Video (Big Ruby 2013)</a></span>
             </div>
         </article>
     </div>
     <div class="box article">
-        <article style="background-image: url(img/bacon.png)">
+        <article style="background-image: url()">
             <div class="content">
-                <h2>wicswac</h2>
-                <span class="genre"><a href="">Video (RailsConf 2018) <i>coming soon...</i></a></span><br/>
-                <span class="genre"><a href="wicswac/wicswac.html">Slides</a></span>
+                <h2>RailsGoat Brown Bag</h2>
+                <span class="genre"><a href="https://youtu.be/FFMKrQtqSFI" target="_blank">Video</a></span>
+            </div>
+        </article>
+    </div>
+    <div class="box article">
+        <article style="background-image: url()">
+            <div class="content">
+                <h2>Hubot Brown Bag</h2>
+                <span class="genre"><a href="https://youtu.be/BsQmn3eoqoM" target="_blank">Video</a></span>
             </div>
         </article>
     </div>
