css tweaks - more vid links

--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
         <article style="background-image: url(img/bacon.png)">
             <div class="content">
                 <h2>wicswac</h2>
-                <span class="genre"><a href=""
-                                       target="_blank">Video (RailsConf 2018) <i>coming soon...</i></a></span><br/>
-                <span class="genre"><a href="wicswac/wicswac.html" target="_blank">Slides</a></span>
+                <span class="genre"><a href="https://www.youtube.com/watch?v=1bti07AIKCE"
+                                       target="_blank">Video (RailsConf 2018)</a></span><br/>
+                <span class="genre"><a href="wicswac/wicswac.html" target="_blank">Slides</a>&nbsp;&nbsp;<span class="comment">press <span>p</span> to see presenter notes</span></span></span>
             </div>
         </article>
     </div>
@@ -90,7 +90,7 @@
                 <h2>Habits of a 2.76x Developer</h2>
                 <span class="genre"><a href="https://www.youtube.com/watch?v=e--7TWeGu94"
                                        target="_blank">Video</a></span><br/>
-                <span class="genre"><a href="productivity/productivity.html" target="_blank">Slides</a></span>
+                <span class="genre"><a href="productivity/productivity.html" target="_blank">Slides</a>&nbsp;&nbsp;<span class="comment">press <span>p</span> to see presenter notes</span></span></span>
             </div>
         </article>
     </div>
@@ -99,7 +99,7 @@
             <div class="content">
                 <h2>In Search of Elegance</h2>
                 <span class="genre"><a href="https://youtu.be/MPi6O-KlHEk" target="_blank">Video</a></span><br/>
-                <span class="genre"><a href="elegance/elegance.html" target="_blank">Slides</a></span>
+                <span class="genre"><a href="elegance/elegance.html" target="_blank">Slides</a>&nbsp;&nbsp;<span class="comment">press <span>p</span> to see presenter notes</span></span></span>
             </div>
         </article>
     </div>
@@ -108,7 +108,7 @@
             <div class="content">
                 <h2>No Number Estimates</h2>
                 <span class="genre"><a href="https://youtu.be/sofW9CsdiaA" target="_blank">Video</a></span><br/>
-                <span class="genre"><a href="estimation/estimation.html" target="_blank">Slides</a></span>
+                <span class="genre"><a href="estimation/estimation.html" target="_blank">Slides</a>&nbsp;&nbsp;<span class="comment">press <span>p</span> to see presenter notes</span></span></span>
             </div>
         </article>
     </div>
