--- a/estimation/estimation.html
+++ b/estimation/estimation.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Vague Estimates are Vague</title>
+    <title>No Number Estimates</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <style type="text/css">
         @import url(https://fonts.googleapis.com/css?family=Sorts+Mill+Goudy);
