Add 4-Pack Lightning Talks

--- a/index.html
+++ b/index.html
@@ -125,6 +125,16 @@
     <div class="box article">
         <article style="background-image: url()">
             <div class="content">
+                <h2>4-Pack of Lightning Talks</h2>
+                <span class="genre">
+                    <a href="https://www.youtube.com/watch?v=a_druldk6lU" target="_blank">Video (Big Ruby 2014)</a>
+                </span>
+            </div>
+        </article>
+    </div>
+    <div class="box article">
+        <article style="background-image: url()">
+            <div class="content">
                 <h2>RailsGoat Brown Bag</h2>
                 <span class="genre"><a href="https://youtu.be/FFMKrQtqSFI" target="_blank">Video</a></span>
             </div>
@@ -138,7 +148,6 @@
             </div>
         </article>
     </div>
-
 </main>
 </body>
 </html>
