--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <article style="background-image: url(img/habits.duck.png)">
             <div class="content">
                 <h2>Habits of a 2.76x Developer</h2>
-                <span class="genre"><a href="https://youtu.be/sWrcw2rrigk"
+                <span class="genre"><a href="https://youtu.be/a53l9PxZS_E"
                                        target="_blank">Video</a></span><br/>
                 <span class="genre"><a href="productivity/productivity.html" target="_blank">Slides</a>&nbsp;&nbsp;<span class="comment">press <span>p</span> to see presenter notes</span></span></span>
             </div>
